# zephyrprojectexample

./: .gitmodules  CMakeLists.txt  Kconfig  README.md  west.yml
app/: CMakeLists.txt  sample.yaml
app/src/: main.c  main.cpp
application/: kosmos200.cpp  kosmos200.hpp
boards/esp32_wrover_ie_n16r8_kosmos200/: Kconfig.kosmos200  kosmos200.yaml
boards/espressif/esp32_wrover_ie_n16r8_kosmos200/: Kconfig.kosmos200  board.yml  kosmos200.dts  kosmos200.yaml
boards/hubelectronics/kosmos200/: Kconfig  Kconfig.kosmos200  board.yml  kosmos200-pinctrl.dtsi  kosmos200_appcpu.dts  kosmos200_appcpu.yaml  kosmos200_procpu.dts  kosmos200_procpu.yaml
dts/bindings/: hubelectronics,led_simple.yaml  vendor-prefixes.txt
project/: Kconfig  prj.conf
project/src/: main.cpp
tests/lib/custom/: CMakeLists.txt
